# userland

./: CMakeLists.txt  buildbrillo  buildbrillo64
containers/: CMakeLists.txt
containers/asf/: asf_reader.c
containers/core/: containers_logging.c
containers/mp4/: mp4_writer.c
host_applications/linux/: CMakeLists.txt
host_applications/linux/apps/hello_pi/hello_fft/: CMakeLists.txt  gpu_fft.c  gpu_fft.h  gpu_fft_base.c  gpu_fft_shaders.c  gpu_fft_trans.c  hello_fft.c  mailbox.c  mailbox.h
interface/khronos/: CMakeLists.txt
interface/khronos/common/: khrn_client_rpc.h  khrn_int_hash.c  khrn_int_hash_asm.s
interface/khronos/egl/: egl_client_surface.c
interface/khronos/ext/: egl_khr_image_client.c  egl_khr_sync_client.c
interface/khronos/glxx/: glxx_client.c
interface/khronos/wf/: wfc_client.c  wfc_client_stream.c
interface/mmal/: CMakeLists.txt
interface/mmal/openmaxil/: mmalomx_core.c
interface/mmal/test/: CMakeLists.txt
interface/mmal/vc/: CMakeLists.txt  mmal_vc_api.c  mmal_vc_diag.c  mmal_vc_shm.c
interface/usbdk/vmcs_rpc_client/: message_dispatch.c
interface/vchiq_arm/: CMakeLists.txt  vchiq_if.h  vchiq_lib.c  vchiq_test.c  vchiq_test.h
interface/vcos/: CMakeLists.txt  vcos.h  vcos_assert.h  vcos_logging.h  vcos_types.h
interface/vcos/pthreads/: CMakeLists.txt  vcos_platform.h
interface/vmcs_host/: CMakeLists.txt  vc_service_common.h  vc_vchi_cecservice.c  vc_vchi_filesys.c  vchost_platform_config.h  vcilcs.c
interface/vmcs_host/linux/: vcfilesys.c
makefiles/cmake/: arm-linux.cmake
opensrc/helpers/libfdt/: libfdt_env.h
(+27 files in other folders)
